--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=H1, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Project Starter</h1>
-<script src=""></script>
+<script src="assets/script.js"></script>
 </body>
 </html>
