--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=H1, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Document</title>
+    <title>Expanding Card</title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+  <div class="container">
+      <div class="panel active"></div>
+      <div class="panel"></div>
+      <div class="panel"></div>
+      <div class="panel"></div>
+      <div class="panel"></div>
+  </div>
 <script src="assets/script.js"></script>
 </body>
 </html>
