--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,11 +9,21 @@
 </head>
 <body>
   <div class="container">
-      <div class="panel active"></div>
-      <div class="panel"></div>
-      <div class="panel"></div>
-      <div class="panel"></div>
-      <div class="panel"></div>
+      <div class="panel active panel-1">
+          <h3>Explore the World</h3>
+      </div>
+      <div class="panel panel-2">
+          <h3>Wild Forest</h3>
+      </div>
+      <div class="panel panel-3">
+          <h3>Sunny Beach</h3>
+      </div>
+      <div class="panel panel-4">
+          <h3>city in winter</h3>
+      </div>
+      <div class="panel panel-4">
+          <h3> Mountain clouds</h3>
+      </div>
   </div>
 <script src="assets/script.js"></script>
 </body>
